added upgrade guides

--- a/docs/developer/contributing/updating-extensions.mdx
+++ b/docs/developer/contributing/updating-extensions.mdx
@@ -40,7 +40,7 @@ module YourExtensionName::OrderDecorator
   end
 end
 
-::Spree::Order.prepend(YourExtensionName::OrderDecorator)
+Spree::Order.prepend(YourExtensionName::OrderDecorator)
 ```
 
 ## Fixing Deface Overrides
