--- a/docs/developer/customization/api_v2.mdx
+++ b/docs/developer/customization/api_v2.mdx
@@ -20,7 +20,7 @@ You can easily swap OOTB Spree serializers with your own thanks to [Spree Depend
 #### Adding custom attributes
 
 <Note>
-Generally it's recommended to use [Properties](/core-concepts/products#product-properties) and [OptionTypes/Option Values](/core-concepts/products#option-types-and-option-values) for custom attributes and not to modify the Spree database schema
+Generally it's recommended to use [Properties](/developer/core-concepts/products#product-properties) and [OptionTypes/Option Values](/developer/core-concepts/products#option-types-and-option-values) for custom attributes and not to modify the Spree database schema
 </Note>
 
 Let's say you want to customize the Storefront API's [Product serializer](https://github.com/spree/spree/blob/master/api/app/serializers/spree/v2/storefront/product\_serializer.rb) to include you custom database column `my_newcustom_attribute` that you've added to the `spree_products` database table.
