--- a/docs/developer/customization/images.mdx
+++ b/docs/developer/customization/images.mdx
@@ -8,37 +8,35 @@ This guide explains how to change Product Images dimensions and different storag
 
 ### Image dimensions
 
-To change the default image dimensions or add new ones you need to create a decorator file `app/models/my_store/spree/image_decorator.rb`:
+To change the default image dimensions or add new ones you need to create a decorator file `app/models/spree/image_decorator.rb`:
 
 ```ruby
-module MyStore
-  module Spree
-    module ImageDecorator
-      module ClassMethods
-        def styles
-          {
-            mini:    '48x48>',
-            small:   '100x100>',
-            product: '240x240>',
-            large:   '600x600>',
-          }
-        end
-      end
-
-      def self.prepended(base)
-        base.inheritance_column = nil
-        base.singleton_class.prepend ClassMethods
+module Spree
+  module ImageDecorator
+    module ClassMethods
+      def styles
+        {
+          mini:    '48x48>',
+          small:   '100x100>',
+          product: '240x240>',
+          large:   '600x600>',
+        }
       end
     end
-  end
-end
 
-::Spree::Image.prepend ::MyStore::Spree::ImageDecorator
+    def self.prepended(base)
+      base.inheritance_column = nil
+      base.singleton_class.prepend ClassMethods
+    end
+  end
+
+  Image.prepend(ImageDecorator)
+end
 ```
 
 You can also create image variations on the fly in your templates, eg.
 
-```text
+```erb
 <%= image_tag(main_app.url_for(@product.images.first.attachment.variant(resize: '150x150'))) %>
 ```
 
