--- a/docs/developer/customization/logic.mdx
+++ b/docs/developer/customization/logic.mdx
@@ -18,37 +18,35 @@ Standard practice for including such changes in your application or extension is
 
 ## Extending Models
 
-Adding a custom method to the [Product](https://github.com/spree/spree/blob/master/core/app/models/spree/product.rb) model: `app/models/my_store/spree/product_decorator.rb`
+Adding a custom method to the [Product](https://github.com/spree/spree/blob/master/core/app/models/spree/product.rb) model: `app/models/spree/product_decorator.rb`
 
 ```ruby
-module MyStore
-  module Spree
-    module ProductDecorator
-      def self.prepended(base)
-        base.before_validation :strip_whitespaces
-      end
+module Spree
+  module ProductDecorator
+    def self.prepended(base)
+      base.before_validation :strip_whitespaces
+    end
 
-      def some_method
-        ...
-      end
+    def some_method
+      ...
+    end
 
-      protected
+    protected
 
-      def strip_whitespaces
-        ...
-      end
+    def strip_whitespaces
+      ...
     end
   end
-end
 
-::Spree::Product.prepend MyStore::Spree::ProductDecorator if ::Spree::Product.included_modules.exclude?(MyStore::Spree::ProductDecorator)
+  Product.prepend(ProductDecorator)
+end
 ```
 
 #### Adding new associations to existing models
 
 Assume you want to add a new model called `Video` associated to `Spree::Product`. Let's start with creating a database migration:
 
-```text
+```bash
 bundle exec rails g migration CreateVideos url:string product:references
 bundle exec rails db:migrate
 ```
@@ -58,41 +56,39 @@ Add new model to `app/models/videos.rb`:
 ```ruby
 class Video < ApplicationRecord
   belongs_to :product, class_name: 'Spree::Product'
+
+  has_one_attached :video_file
 end
 ```
 
-Finally add the association in `ProductDecorator` in `app/models/my_store/spree/product_decorator.rb`:
+Finally add the association in `ProductDecorator` in `app/models/spree/product_decorator.rb`:
 
 ```ruby
-module MyStore
-  module Spree
-    module ProductDecorator
-      def self.prepended(base)
-        base.has_many :videos, class_name: 'Video', foreign_key: 'product_id', dependent: :destroy
-      end
+module Spree
+  module ProductDecorator
+    def self.prepended(base)
+      base.has_many :videos, class_name: 'Video', foreign_key: 'product_id', dependent: :destroy
     end
   end
-end
 
-::Spree::Product.prepend MyStore::Spree::ProductDecorator if ::Spree::Product.included_modules.exclude?(MyStore::Spree::ProductDecorator)
+  Product.prepend(ProductDecorator)
+end
 ```
 
 ## Extending Controllers
 
-Adding a custom action to the [ProductsController](https://github.com/spree/spree/blob/master/frontend/app/controllers/spree/products_controller.rb): `app/controllers/my_store/spree/products_controller_decorator.rb`
+Adding a custom action to the [ProductsController](https://github.com/spree/spree/blob/master/frontend/app/controllers/spree/products_controller.rb): `app/controllers/spree/products_controller_decorator.rb`
 
 ```ruby
-module MyStore
-  module Spree
-    module ProductsControllerDecorator
-      def some_action
-        ...
-      end
+module Spree
+  module ProductsControllerDecorator
+    def some_action
+      ...
     end
   end
-end
 
-::Spree::ProductsController.prepend MyStore::Spree::ProductsControllerDecorator if ::Spree::ProductsController.included_modules.exclude?(MyStore::Spree::ProductsControllerDecorator)
+  ProductsController.prepend(ProductsControllerDecorator)
+end
 ```
 
 The exact same format can be used to redefine an existing method.
@@ -102,21 +98,19 @@ The exact same format can be used to redefine an existing method.
 If you extend the Products controller with a new method, you may very well want to access product data in that method. You can do so by using the `:load_data before_action`.
 
 ```ruby
-module MyStore
-  module Spree
-    module ProductsControllerDecorator
-      def self.prepended(base)
-        base.before_action :load_data, only: :some_action
-      end
+module Spree
+  module ProductsControllerDecorator
+    def self.prepended(base)
+      base.before_action :load_data, only: :some_action
+    end
 
-      def some_action
-        ...
-      end
+    def some_action
+      ...
     end
   end
-end
 
-::Spree::ProductsController.prepend MyStore::Spree::ProductsControllerDecorator if ::Spree::ProductsController.included_modules.exclude?(MyStore::Spree::ProductsControllerDecorator)
+  ProductsController.prepend(ProductsControllerDecorator)
+end
 ```
 
 `:load_data` will use `params[:id]` to lookup the product by its permalink.
