--- a/docs/developer/customization/permissions.mdx
+++ b/docs/developer/customization/permissions.mdx
@@ -24,17 +24,15 @@ For authorization Spree uses [CanCanCan](https://github.com/CanCanCommunity/canc
 
 Let's assume you would like to add a new Role `customer_service` with some limited access to Admin Panel \(only Orders section\).
 
-Create a new file called `app/models/my_project/customer_service_ability.rb`
+Create a new file called `app/models/customer_service_ability.rb`
 
 ```ruby
-module MyProject
-  class CustomerServiceAbility
-    include CanCan::Ability
+class CustomerServiceAbility
+  include CanCan::Ability
 
-    def initialize(user)
-      if user.respond_to?(:has_spree_role?) && user.has_spree_role?('customer_service')
-        can :manage, ::Spree::Order
-      end
+  def initialize(user)
+    if user.respond_to?(:has_spree_role?) && user.has_spree_role?('customer_service')
+      can :manage, Spree::Order
     end
   end
 end
@@ -42,20 +40,18 @@ end
 
 Please familiarize yourself with [CanCanCan](https://github.com/CanCanCommunity/cancancan) syntax to understand `can/cannot` methods more.
 
-Now we need to inform Spree to use this ability, create another file `app/models/my_project/spree/ability_decorator.rb` with contents:
+Now we need to inform Spree to use this ability, create another file `app/models/spree/ability_decorator.rb` with contents:
 
 ```ruby
-module MyProject
-  module Spree
-    module AbilityDecorator
-      def abilities_to_register
-        [CustomerServiceAbility]
-      end
+module Spree
+  module AbilityDecorator
+    def abilities_to_register
+      [CustomerServiceAbility]
     end
   end
-end
 
-::Spree::Ability.prepend(MyProject::Spree::AbilityDecorator)
+  Ability.prepend(AbilityDecorator)
+end
 ```
 
 ## Replacing all permissions
@@ -63,38 +59,36 @@ end
 As we've mentioned earlier, Spree uses the main Ability class. You can change that to use your own custom Ability class via [Dependencies](dependencies) in Spree initializer \(`config/initializers/spree.rb`\), eg.
 
 ```ruby
-Spree::Dependencies.ability_class = 'MyProject::Ability'
+Spree::Dependencies.ability_class = 'CustomAbility'
 ```
 
-Now, let's define that new class in `app/models/my_project/ability.rb`
+Now, let's define that new class in `app/models/custom_ability.rb`
 
 ```ruby
-module MyProject
-  class Ability < ::Spree::Ability
-    def initialize(user)
-      alias_cancan_delete_action
+class CustomAbility < Spree::Ability
+  def initialize(user)
+    alias_cancan_delete_action
 
-      user ||= Spree.user_class.new
+    user ||= Spree.user_class.new
 
-      if user.respond_to?(:has_spree_role?) && user.has_spree_role?('admin')
-        apply_admin_permissions(user)
-        # add some more permissions here for the admin role
-      else 
-        if user.respond_to?(:has_spree_role?) && user.has_spree_role?(:customer_service)
-          apply_customer_service_permissions(user)
-        end
-
-        apply_user_permissions(user)
+    if user.respond_to?(:has_spree_role?) && user.has_spree_role?('admin')
+      apply_admin_permissions(user)
+      # add some more permissions here for the admin role
+    else 
+      if user.respond_to?(:has_spree_role?) && user.has_spree_role?(:customer_service)
+        apply_customer_service_permissions(user)
       end
 
-      protect_admin_role
+      apply_user_permissions(user)
     end
 
-    protected
+    protect_admin_role
+  end
 
-    def apply_customer_service_permissions(user)
-      can :manage, ::Spree::Order
-    end
+  protected
+
+  def apply_customer_service_permissions(user)
+    can :manage, Spree::Order
   end
 end
 ```
@@ -102,4 +96,3 @@ end
 After restarting the rails server you observe new permissions being recognized in the application.
 
 Further permission changes should be automatically picked up in development and should not require application restarts.
-
