--- a/docs/developer/security/index.mdx
+++ b/docs/developer/security/index.mdx
@@ -14,7 +14,7 @@ This is a list of all Spree versions currently being supported by the Spree team
 | 4.3     | 14.09.2021   | 14.03.2023 |
 | 4.2     | 23.02.2021   | 23.08.2022 |
 
-If you're using an older version [please upgrade](../upgrades/upgrades/). Have trouble upgrading? [Contact us for support](https://spreecommerce.org/contact/).
+If you're using an older version [please upgrade](../upgrades/). Have trouble upgrading? [Contact us for support](https://spreecommerce.org/contact/).
 
 Or you can migrate once to [Spree as a Service](https://spreecommerce.org/spree-as-a-service/) and forget about upgrades altogether!
 
