--- a/docs/developer/upgrades/4.2-to-4.3.mdx
+++ b/docs/developer/upgrades/4.2-to-4.3.mdx
@@ -1,20 +1,18 @@
 ---
-title: Upgrading Spree 4.2 to 4.3
+title: 4.2 to 4.3
 section: upgrades
 order: 0
 hidden: true
 description: This guide covers upgrading a 4.2 Spree application to Spree 4.3.
 ---
 
-# 4.2 to 4.3
-
 If you have any questions or suggestions feel free to reach out through [Spree slack channels](http://slack.spreecommerce.org/)
 
 **If you're on an older version than 4.1 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
 1. [upgrade 3.7 to 4.0](three-dot-seven-to-four-dot-oh)
-2. [upgrade 4.0 to 4.1](four-dot-oh-to-four-dot-one)
-3. [upgrade 4.1 to 4.2](four-dot-one-to-four-dot-two)
+2. [upgrade 4.0 to 4.1](four-dot-oh-to-4.1)
+3. [upgrade 4.1 to 4.2](4.1-to-4.2)
 
 This is the safest and recommended method.
 
