--- a/docs/developer/upgrades/one-dot-three-to-two-dot-oh.mdx
+++ b/docs/developer/upgrades/one-dot-three-to-two-dot-oh.mdx
@@ -1,18 +1,18 @@
 ---
-title: Upgrading Spree from 1.3.x to 2.0.x
+title: 1.3 to 2.0
 section: upgrades
 order: 13
 hidden: true
-description: 'This guide covers upgrading a 1.3.x Spree store, to a 2.0.x store.'
+description: 'This guide covers upgrading a 1.3 Spree store, to a 2.0 store.'
 ---
 
 # 1.3 to 2.0
 
 ## Overview
 
-This guide has been written from the perspective of a blank Spree 1.3.x store with no extensions.
+This guide has been written from the perspective of a blank Spree 1.3 store with no extensions.
 
-If you have extensions that your store depends on, you will need to manually verify that each of those extensions works within your 2.0.x store once this upgrade is complete. Typically, extensions that are compatible with this version of Spree will have a 2-0-stable branch.
+If you have extensions that your store depends on, you will need to manually verify that each of those extensions works within your 2.0 store once this upgrade is complete. Typically, extensions that are compatible with this version of Spree will have a 2-0-stable branch.
 
 Given that this is a major release, you may want to read through the [2.0.0 release notes](http://guides.spreecommerce.org/release_notes/spree_2_0_0.html) to see what has changed before proceeding with this upgrade.
 
@@ -30,7 +30,7 @@ Run `bundle update spree`.
 This version of Spree bumps the dependency for jquery-rails to this:
 
 ```ruby
-gem 'jquery-rails', '3.0.0'```
+gem 'jquery-rails', '3.0'```
 
 Ensure that you have a line such as this in your Gemfile to allow that dependency.
 
