--- a/docs/developer/upgrades/quickstart.mdx
+++ b/docs/developer/upgrades/quickstart.mdx
@@ -1,12 +1,7 @@
 ---
-title: Upgrading Spree
-section: upgrades
-order: 0
+title: Quickstart
+description: Learn how to upgrade your Spree application
 ---
-
-# How to perform upgrades
-
-## Overview
 
 Keeping your Spree installation up-to-date is essential to keep it safe and secure. Each Spree version brings new features, enhancements and bug fixes so it's greatly beneficial for you and your clients to upgrade frequently.
 
