--- a/docs/developer/upgrades/three-dot-five-to-three-dot-six.mdx
+++ b/docs/developer/upgrades/three-dot-five-to-three-dot-six.mdx
@@ -1,5 +1,5 @@
 ---
-title: Upgrading Spree from 3.5 to 3.6
+title: 3.5 to 3.6
 section: upgrades
 order: 4
 description: 'This guide covers upgrading a 3.5 Spree application, to a 3.6 application.'
