--- a/docs/developer/upgrades/three-dot-four-to-three-dot-five.mdx
+++ b/docs/developer/upgrades/three-dot-four-to-three-dot-five.mdx
@@ -1,5 +1,5 @@
 ---
-title: Upgrading Spree from 3.4 to 3.5
+title: 3.4 to 3.5
 section: upgrades
 order: 5
 description: 'This guide covers upgrading a 3.4 Spree store, to a 3.5 store.'
@@ -10,7 +10,7 @@ description: 'This guide covers upgrading a 3.4 Spree store, to a 3.5 store.'
 ### Update Gemfile
 
 ```ruby
-gem 'spree', '~> 3.5.0'
+gem 'spree', '~> 3.5'
 gem 'spree_auth_devise', '~> 3.3'
 gem 'spree_gateway', '~> 3.3'
 ```
