--- a/docs/developer/upgrades/three-dot-one-to-three-dot-two.mdx
+++ b/docs/developer/upgrades/three-dot-one-to-three-dot-two.mdx
@@ -1,8 +1,8 @@
 ---
-title: Upgrading Spree from 3.1 to 3.2
+title: 3.1 to 3.2
 section: upgrades
 order: 8
-description: 'This guide covers upgrading a 3.1.x Spree store, to a 3.2.x store.'
+description: 'This guide covers upgrading a 3.1 Spree store, to a 3.2 store.'
 ---
 
 # 3.1 to 3.2
@@ -14,9 +14,9 @@ Please follow the [official Rails guide](http://edgeguides.rubyonrails.org/upgra
 ### Update Gemfile
 
 ```ruby
-gem 'spree', '~> 3.2.0'
-gem 'spree_auth_devise', '~> 3.2.0'
-gem 'spree_gateway', '~> 3.2.0'
+gem 'spree', '~> 3.2'
+gem 'spree_auth_devise', '~> 3.2'
+gem 'spree_gateway', '~> 3.2'
 ```
 
 ### Update your extensions
