--- a/docs/developer/upgrades/three-dot-three-to-three-dot-four.mdx
+++ b/docs/developer/upgrades/three-dot-three-to-three-dot-four.mdx
@@ -1,5 +1,5 @@
 ---
-title: Upgrading Spree from 3.3 to 3.4
+title: 3.3 to 3.4
 section: upgrades
 order: 6
 description: 'This guide covers upgrading a 3.3 Spree store, to a 3.4 store.'
@@ -10,7 +10,7 @@ description: 'This guide covers upgrading a 3.3 Spree store, to a 3.4 store.'
 ### Update Gemfile
 
 ```ruby
-gem 'spree', '~> 3.4.0'
+gem 'spree', '~> 3.4'
 gem 'spree_auth_devise', '~> 3.3'
 gem 'spree_gateway', '~> 3.3'
 ```
