--- a/docs/developer/upgrades/two-dot-oh-to-two-dot-one.mdx
+++ b/docs/developer/upgrades/two-dot-oh-to-two-dot-one.mdx
@@ -1,18 +1,18 @@
 ---
-title: Upgrading Spree from 2.0.x to 2.1.x
+title: 2.0 to 2.1
 section: upgrades
 order: 12
 hidden: true
-description: 'This guide covers upgrading a 2.0.x Spree store, to a 2.1.x store.'
+description: 'This guide covers upgrading a 2.0 Spree store, to a 2.1 store.'
 ---
 
 # 2.0 to 2.1
 
 ## Overview
 
-This guide has been written from the perspective of a blank Spree 2.0.x store with no extensions.
+This guide has been written from the perspective of a blank Spree 2.0 store with no extensions.
 
-If you have extensions that your store depends on, you will need to manually verify that each of those extensions works within your 2.1.x store once this upgrade is complete. Typically, extensions that are compatible with this version of Spree will have a 2-1-stable branch.
+If you have extensions that your store depends on, you will need to manually verify that each of those extensions works within your 2.1 store once this upgrade is complete. Typically, extensions that are compatible with this version of Spree will have a 2-1-stable branch.
 
 This is the first Spree release that supports Rails 4 exclusively. Spree releases after this point will continue to support Rails 4 only.
 
@@ -23,7 +23,7 @@ For this Spree release, you will need to upgrade your Rails version to at least 
 It is recommended to read through the [Upgrading Ruby on Rails guide](http://guides.rubyonrails.org/upgrading_ruby_on_rails.html#upgrading-%20from-rails-3-2-to-rails-4-0) to learn what needs to be done for your application to migrate to Rails 4.
 
 ```ruby
-gem 'rails', '~> 4.0.0'```
+gem 'rails', '~> 4.0'```
 
 ## Upgrade Spree
 
