--- a/docs/developer/contributing/creating-an-extension.mdx
+++ b/docs/developer/contributing/creating-an-extension.mdx
@@ -31,7 +31,7 @@ cd spree_simple_sales
 
 ## Adding a Sale Price to Variants
 
-The first thing we need to do is create a migration that adds a sale\_price column to [variants](/core-concepts/products#variants).
+The first thing we need to do is create a migration that adds a sale\_price column to [variants](/developer/core-concepts/products#variants).
 
 We can do this with the following command:
 
@@ -93,13 +93,13 @@ module SpreeSimpleSales
   module Spree
     module HomeControllerDecorator
       def sale
-        @products = ::Spree::Product.joins(:variants_including_master).where('spree_variants.sale_price is not null').distinct
+        @products = Spree::Product.joins(:variants_including_master).where('spree_variants.sale_price is not null').distinct
       end
     end
   end
 end
 
-Spree::HomeController.prepend SpreeSimpleSales::Spree::HomeControllerDecorator
+Spree::HomeController.prepend SpreeSimpleSalesSpree::HomeControllerDecorator
 ```
 
 This will select just the products that have a variant with a `sale_price` set.
@@ -156,13 +156,13 @@ module SpreeSimpleSales
     module VariantDecorator
       def price_in(currency)
         return super unless sale_price.present?
-        ::Spree::Price.new(variant_id: self.id, amount: self.sale_price, currency: currency)
+        Spree::Price.new(variant_id: self.id, amount: self.sale_price, currency: currency)
       end
     end
   end
 end
 
-Spree::Variant.prepend SpreeSimpleSales::Spree::VariantDecorator
+Spree::Variant.prepend SpreeSimpleSalesSpree::VariantDecorator
 ```
 
 If there is a `sale_price` present on the product's master variant, we return that price. Otherwise, we call the original implementation of `price_in` \(using `return super`\).
