--- a/docs/developer/customization/deface_overrides_tutorial.mdx
+++ b/docs/developer/customization/deface_overrides_tutorial.mdx
@@ -33,7 +33,7 @@ mkdir app/overrides
 
 So we want to override `spree/admin/products/_form.html.erb`. Here is the part of the file we are going to add content to \(you can also view the [full file](https://github.com/spree/spree/blob/master/backend/app/views/spree/admin/products/_form.html.erb)\):
 
-```text
+```erb
 <div class="right four columns omega" data-hook="admin_product_form_right">
   <%= f.field_container :price do %>
     <%= f.label :price, raw(Spree.t(:master_price) + required_span_tag) %>
@@ -120,7 +120,7 @@ As Spree views are changed over coming versions, the original HTML elements mayb
 
 For example, spree/products/show.html.erb looks as follows:
 
-```text
+```erb
 <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
   <%% body_id = 'product-details' %>
   <div class="columns six alpha" data-hook="product_left_part">
@@ -206,7 +206,7 @@ Deface evaluates all the selectors passed against the original erb view contents
 
 Given the following Erb file:
 
-```text
+```erb
 <%% if products.empty? %>
  <%%= Spree.t(:no_products_found) %>
 <%% elsif params.key?(:keywords) %>
