--- a/docs/developer/upgrades/4.0-to-4.1.mdx
+++ b/docs/developer/upgrades/4.0-to-4.1.mdx
@@ -1,21 +1,19 @@
 ---
-title: Upgrading Spree 4.0 to 4.1
+title: 4.0 to 4.1
 section: upgrades
 order: 1
 description: This guide covers upgrading a 4.0 Spree application to Spree 4.1.
 ---
 
-# 4.0 to 4.1
-
 If you have any questions or suggestions feel free to reach out through [Spree slack channels](http://slack.spreecommerce.org/)
 
 **If you're on an older version than 4.0 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
-1. [upgrade 3.3 to 3.4](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-three-to-three-dot-four)
-2. [upgrade 3.4 to 3.5](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-four-to-three-dot-five)
-3. [upgrade 3.5 to 3.6](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-five-to-three-dot-six)
-4. [upgrade 3.6 to 3.7](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-six-to-three-dot-seven)
-5. [upgrade 3.7 to 4.0](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-seven-to-four-dot-oh)
+1. [upgrade 3.3 to 3.4](/developer/upgrades/three-dot-three-to-three-dot-four)
+2. [upgrade 3.4 to 3.5](/developer/upgrades/three-dot-four-to-three-dot-five)
+3. [upgrade 3.5 to 3.6](/developer/upgrades/three-dot-five-to-three-dot-six)
+4. [upgrade 3.6 to 3.7](/developer/upgrades/three-dot-six-to-three-dot-seven)
+5. [upgrade 3.7 to 4.0](/developer/upgrades/three-dot-seven-to-four-dot-oh)
 
 This is the safest and recommended method.
 
@@ -70,7 +68,7 @@ To replace your current frontend with the new Spree UI follow these steps:
 3. Next, you will need to copy over two files:
    * [spree\_storefront.rb](https://raw.githubusercontent.com/spree/spree/master/core/lib/generators/spree/install/templates/config/initializers/spree_storefront.rb) to `config/initializers/spree_storefront.rb`
    * [spree\_storefront.yml](https://raw.githubusercontent.com/spree/spree/master/core/lib/generators/spree/install/templates/config/spree_storefront.yml) to `config/spree_storefront.yml`
-4. If you overwrote any `spree_frontend` [controllers](https://github.com/spree/spree/tree/master/frontend/app/controllers) you will need to either remove your local copies or move your custom logic to [decorators](../../customization/logic#extending-controllers)
+4. If you overwrote any `spree_frontend` [controllers](https://github.com/spree/spree/tree/master/frontend/app/controllers) you will need to either remove your local copies or move your custom logic to [decorators](/developer/customization#extending-controllers)
 5. The same goes for [helpers](https://github.com/spree/spree/tree/master/frontend/app/helpers/spree)
 6. You will also need to remove this line:
 
@@ -89,7 +87,7 @@ If you wish to not move to the new Storefront UI it's still an option. Just proc
    If you're using Spree Auth Devise gem you need to lock it at 4.0.0 in your `Gemfile`:
 
    ```ruby
-    gem 'spree_auth_devise', '~> 4.0.0'
+    gem 'spree_auth_devise', '~> 4.0'
    ```
 
 2. Copy over all views from Spree 4.0
