--- a/docs/developer/upgrades/4.5-to-4.6.mdx
+++ b/docs/developer/upgrades/4.5-to-4.6.mdx
@@ -1,32 +1,31 @@
 ---
+title: 4.5 to 4.6
 description: This guide covers upgrading a 4.5 Spree application to Spree 4.6.
 ---
 
-# 4.5 to 4.6
+<Note>
+If you're on an older version than 4.5 please follow previous upgrade guides and perform those upgrades incrementally, e.g.
 
-**If you're on an older version than 4.5 please follow previous upgrade guides and perform those upgrades incrementally, e.g.**
-
-1. [upgrade 4.2 to 4.3](fout-dot-two-to-four-dot-three)
-2. [upgrade 4.3 to 4.4](https://docs.spreecommerce.org/developer/upgrades/upgrades/4.3-to-4.4)
+1. [upgrade 4.2 to 4.3](4.2-to-4.3)
+2. [upgrade 4.3 to 4.4](4.3-to-4.4)
 3. [upgrade 4.4 to 4.5](4.4-to-4.5)
-
-This is the safest and recommended method.
+</Note>
 
 ## Update Gemfile
 
-```
-gem 'spree', '>= 4.6.0'
+```ruby
+gem 'spree', '>= 4.6'
 ```
 
 Update all other spree gems used in your application to 4.6.0 or version compatible with 4.6:
 
-```
-gem 'spree_sample', '~> 4.6.0'
-gem 'spree_emails', '~> 4.6.0'
-gem 'spree_frontend', '>= 4.6.0'
-gem 'spree_backend', '>= 4.6.0'
+```ruby
+gem 'spree_sample', '~> 4.6'
+gem 'spree_emails', '~> 4.6'
+gem 'spree_frontend', '>= 4.6'
+gem 'spree_backend', '>= 4.6'
 gem 'spree_gateway', '~> 3.10'
-gem 'spree_auth_devise', '>= 4.5.0'
+gem 'spree_auth_devise', '>= 4.5'
 gem 'spree_i18n', '~> 5.1'
 ```
 
@@ -62,7 +61,7 @@ If you're using raw SQL queries (either in the application code, or running in e
 
 ## Run Additional Commands for Frontend
 
-If using [Spree Frontend](https://github.com/spree/spree\_legacy\_frontend), run the following additional commands to get everything set up correctly with the updated gems:
+If using [Spree Frontend](https://github.com/spree/spree_rails_frontend), run the following additional commands to get everything set up correctly with the updated gems:
 
 ```
 bin/rails javascript:install:esbuild
@@ -77,6 +76,3 @@ And that's a wrap! :tada:
 
 For information about changes contained within this release, please read the [Spree 4.6.0 Release Notes](https://github.com/spree/spree/releases/tag/v4.6.0).
 
-## More info
-
-If you have any questions, issues or suggestions feel free to reach out through [Spree slack channels](http://slack.spreecommerce.org/).
