--- a/docs/developer/upgrades/one-dot-two-to-one-dot-three.mdx
+++ b/docs/developer/upgrades/one-dot-two-to-one-dot-three.mdx
@@ -1,18 +1,18 @@
 ---
-title: Upgrading Spree from 1.2.x to 1.3.x
+title: 1.2 to 1.3
 section: upgrades
 order: 14
 hidden: true
-description: 'This guide covers upgrading a 1.2.x Spree store, to a 1.3.x store.'
+description: 'This guide covers upgrading a 1.2 Spree store, to a 1.3 store.'
 ---
 
 # 1.2 to 1.3
 
 ## Overview
 
-This guide has been written from the perspective of a blank Spree 1.2.x store with no extensions.
+This guide has been written from the perspective of a blank Spree 1.2 store with no extensions.
 
-If you have extensions that your store depends on, you will need to manually verify that each of those extensions works within your 1.3.x store once this upgrade is complete. Typically, extensions that are compatible with this version of Spree will have a 1-3-stable branch.
+If you have extensions that your store depends on, you will need to manually verify that each of those extensions works within your 1.3 store once this upgrade is complete. Typically, extensions that are compatible with this version of Spree will have a 1-3-stable branch.
 
 ## Upgrade Spree
 
@@ -28,7 +28,7 @@ Run `bundle update spree`.
 This version of Spree bumps the dependency for jquery-rails to this:
 
 ```ruby
-gem 'jquery-rails', '2.2.0'```
+gem 'jquery-rails', '2.2'```
 
 Ensure that you have a line such as this in your Gemfile to allow that dependency.
 
