--- a/docs/developer/upgrades/three-dot-seven-to-four-dot-oh.mdx
+++ b/docs/developer/upgrades/three-dot-seven-to-four-dot-oh.mdx
@@ -1,21 +1,19 @@
 ---
-title: Upgrading Spree 3.7 to 4.0
+title: 3.7 to 4.0
 section: upgrades
 order: 2
 description: This guide covers upgrading a 3.7 Spree application to Spree 4.0.
 ---
 
-# 3.7 to 4.0
-
 If you have any questions or suggestions feel free to reach out through [Spree slack channels](http://slack.spreecommerce.org/)
 
 **If you're on an older version than 3.7 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
-1. [upgrade 3.2 to 3.3](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-two-to-three-dot-three)
-2. [upgrade 3.3 to 3.4](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-three-to-three-dot-four)
-3. [upgrade 3.4 to 3.5](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-four-to-three-dot-five)
-4. [upgrade 3.5 to 3.6](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-five-to-three-dot-six)
-5. [upgrade 3.6 to 3.7](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-six-to-three-dot-seven)
+1. [upgrade 3.2 to 3.3](/developer/upgrades/three-dot-two-to-three-dot-three)
+2. [upgrade 3.3 to 3.4](/developer/upgrades/three-dot-three-to-three-dot-four)
+3. [upgrade 3.4 to 3.5](/developer/upgrades/three-dot-four-to-three-dot-five)
+4. [upgrade 3.5 to 3.6](/developer/upgrades/three-dot-five-to-three-dot-six)
+5. [upgrade 3.6 to 3.7](/developer/upgrades/three-dot-six-to-three-dot-seven)
 
 This is the safest and recommended method.
 
@@ -195,7 +193,7 @@ end
 Spree::Base.singleton_class.send :prepend, Spree::BaseDecorator
 ```
 
-Please also consider other options for [Logic Customization](../../customization/logic).
+Please also consider other options for [Logic Customization](/developer/customization).
 
 We recommend also reading through [Ruby modules: Include vs Prepend vs Extend](https://medium.com/@leo_hetsch/ruby-modules-include-vs-prepend-vs-extend-f09837a5b073)
 
@@ -221,8 +219,8 @@ As we know this is a big portion of work you can still use Bootstrap 3 for your 
 ## Update Gemfile
 
 ```ruby
-gem 'spree', '~> 4.0'
-gem 'spree_auth_devise', '~> 4.0'
+gem 'spree', '~> 4'
+gem 'spree_auth_devise', '~> 4'
 gem 'spree_gateway', '~> 3.6'
 ```
 
