--- a/docs/developer/upgrades/three-dot-six-to-three-dot-seven.mdx
+++ b/docs/developer/upgrades/three-dot-six-to-three-dot-seven.mdx
@@ -1,5 +1,5 @@
 ---
-title: Upgrading Spree from 3.6 to 3.7
+title: 3.6 to 3.7
 section: upgrades
 order: 3
 description: 'This guide covers upgrading a 3.6 Spree application, to version 3.7.'
@@ -10,7 +10,7 @@ description: 'This guide covers upgrading a 3.6 Spree application, to version 3.
 ## Update Gemfile
 
 ```ruby
-gem 'spree', '~> 3.7.0'
+gem 'spree', '~> 3.7'
 gem 'spree_auth_devise', '~> 3.5'
 gem 'spree_gateway', '~> 3.4'
 ```
