--- a/docs/developer/upgrades/3.0-to-3.1.mdx
+++ b/docs/developer/upgrades/3.0-to-3.1.mdx
@@ -5,8 +5,6 @@ order: 9
 description: 'This guide covers upgrading a 3.0 Spree store, to a 3.1 store'
 ---
 
-# 3.0 to 3.1
-
 ## Upgrade Rails
 
 For this Spree release, you will need to upgrade your Rails version to at least 4.2.6.
@@ -20,7 +18,7 @@ gem 'rails', '~> 4.2.6'
 For best results, use the spree gem in version 3.1:
 
 ```ruby
-gem 'spree', '~> 3.1.0.rc1'
+gem 'spree', '~> 3.1'
 ```
 
 Run `bundle update spree`.
